--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "client/node_modules"
   ],
   "dependencies": {
+    "@google-cloud/language": "^4.2.2",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.2",
+    "@tensorflow/tfjs": "^3.3.0",
     "@tensorflow/tfjs-node": "^3.3.0",
     "axios": "^0.21.1",
     "express": "^4.16.4"
